--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,13 @@
               <a class="nav-link" href="{% url 'project_index' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="{% url 'posts' %}">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
           </ul>
         </div>
