--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,15 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'posts' %}">Blog</a>
             </li>
+            {% if not user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
+           {% else %}
+           <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+           </li>
+           {% endif %}
           </ul>
         </div>
     </div>
