--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
             </li>
            {% else %}
            <li class="nav-item">
+            <a class="nav-link" href="#">User: {{user.username}}</a>
+           </li>
+           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
            </li>
            {% endif %}
