--- a/templates/blog/posts.html
+++ b/templates/blog/posts.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
-    <h1>Blog</h1>
+    <div class="row">
+        <div class="col"><h1>Blog</h1> </div>
+        <div class="col d-flex justify-content-end">
+            <a class="btn btn-success" href="{% url 'post_add' %}">New Post</a>
+        </div>
+    </div>
     <hr>
     {% for post in posts %}
     <h2><a href="{% url 'post_detail' post.pk%}">{{ post.title }}</a></h2>
