--- a/templates/blog/post_add.html
+++ b/templates/blog/post_add.html
@@ -1,8 +1,24 @@
 {% extends "base.html" %}
 {% block page_content %}
-<form action="" method="post">
+<form method="post">
     {% csrf_token %}
-    {{form.as_p}}
-    <button class="btn btn-primary">Add</button>
+    <div class="form-group">
+        <label for="id_body">Title: </label>
+        <input type="text" name="title" maxlength="255" required id="id_title" class="form-control" placeholder="Post Title">
+    </div>
+    <div class="form-group">
+        <textarea rows="7" name="body" required id="id_body" class="form-control"
+            placeholder="Write your details here"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="exampleFormControlSelect2">Post Categories</label>
+        <select class="form-control" name="categories" required id="id_categories" multiple>
+            {% for k, v in form.categories.field.choices %}
+            <option value={{k}}>{{v}}</option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
 {% endblock %}
