--- a/templates/blog/posts.html
+++ b/templates/blog/posts.html
@@ -3,9 +3,11 @@
 <div class="col-md-8 offset-md-2">
     <div class="row">
         <div class="col"><h1>Blog</h1> </div>
+        {% if user.is_authenticated %}
         <div class="col d-flex justify-content-end">
             <a class="btn btn-success" href="{% url 'post_add' %}">New Post</a>
         </div>
+        {% endif %}
     </div>
     <hr>
     {% for post in posts %}
