--- a/templates/blog/posts.html
+++ b/templates/blog/posts.html
@@ -10,18 +10,33 @@
         {% endif %}
     </div>
     <hr>
+    <div class="row-col-1">
     {% for post in posts %}
-    <h2><a href="{% url 'post_detail' post.pk%}">{{ post.title }}</a></h2>
-    <small>
-        {{ post.created_on.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for category in post.categories.all %}
-        <a href="{% url 'post_category' category.name %}">
-            {{ category.name }}
-        </a>&nbsp;
-        {% endfor %}
-    </small>
-    <p>{{ post.body | slice:":400" }}...</p>
+    <div class="col">
+        <div class="row">
+            <div class="col-11">
+                <h2><a href="{% url 'post_detail' post.pk%}">{{ post.title }}</a></h2>
+            </div>
+            <div class="col-1">
+                <form action="{% url 'post_delete' post.pk %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">DELETE</button>
+                </form>
+            </div>
+        </div>
+        
+        <small>
+            {{ post.created_on.date }} |&nbsp;
+            Categories:&nbsp;
+            {% for category in post.categories.all %}
+            <a href="{% url 'post_category' category.name %}">
+                {{ category.name }}
+            </a>&nbsp;
+            {% endfor %}
+        </small>
+        <p>{{ post.body | slice:":400" }}...</p>
+    </div>
     {% endfor %}
+    </div>
 </div>
 {% endblock %}
