--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% block page_content %}
-<div class="col-md-8 offset-md-2">
-    <h1>{{ post.title }}</h1>
+<div class="col-md-8 mt-5 offset-md-2">
+    <div class="row">
+        <div class="col-11">
+            <h1>{{ post.title }}</h1>
+        </div>
+        <div class="col-1">
+            <form action="{% url 'post_update' post.pk %}" method="get">
+                <button class="btn btn-warning" type="submit">Edit</button>
+            </form>
+        </div>
+    </div>
     <small>
         {{ post.created_on.date }} |&nbsp;
         Categories:&nbsp;
