--- a/templates/blog/posts.html
+++ b/templates/blog/posts.html
@@ -2,10 +2,13 @@
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
     <div class="row">
-        <div class="col"><h1>Blog</h1> </div>
+        <div class="col"><h2>Posts</h2></div>
         {% if user.is_authenticated %}
         <div class="col d-flex justify-content-end">
-            <a class="btn btn-success" href="{% url 'post_add' %}">New Post</a>
+            <a class="btn btn-success my-1" href="{% url 'post_add' %}">
+                <i class="fa-solid fa-plus"></i>
+                New Post
+            </a>
         </div>
         {% endif %}
     </div>
